web-infras/parser/tests/fixtures/babel/es2017/async-arrow/parenthesized-array-pattern-nested/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,12)
1|async ([ [(a)] = [] ] = []) => {};
 |          ^
